--- a/yaml/config.yaml
+++ b/yaml/config.yaml
@@ -1,20 +1,34 @@
 dataset:
-  dataset_dir:
-  file_pattern:
-  names_to_labels:
-  num_samples:
-  num_classes:
+  dataset_dir: "D:/MURA-v1.1"
+  file_pattern: "mura14_*.tfrecord"
+  names_to_labels: {
+                '0':'ELBOW_negative', 
+                '1':'ELBOW_positive',
+                '2':'FINGER_negative', 
+                '3':'FINGER_positive',
+                '4': 'FOREARM_negative',
+                '5': 'FOREARM_positive',
+                '6': 'HAND_negative',
+                '7': 'HAND_positive',
+                '8': 'HUMERUS_negative',
+                '9': 'HUMERUS_positive',
+                '10': 'SHOULDER_negative',
+                '11': 'SHOULDER_positive',
+                '12': 'WRIST_negative',
+                '13': 'WRIST_positive'
+                }
+  num_samples: 36807
+  num_classes: 14
   
 model:
-  name:
+  name: "mobilenetv2"
 
 train:
-  batch_size:
-  optimizer_noun:
+  batch_size: 32
+  optimizer_noun: "adam"
   learning_rate:
-    initial:
-    decay_factor:
-    before_decay:
-  num_epochs:
-  shuffle_buffer_size:
-eval:
+    initial: 0.0001
+    decay_factor: 0.95
+    before_decay: 2
+  num_epochs: 100
+  shuffle_buffer_size: 1024
