--- a/yaml/config.yaml
+++ b/yaml/config.yaml
@@ -1,6 +1,6 @@
 dataset:
-  dataset_dir: "D://MURA-v1.1//multiclass"
-  file_pattern: "mura14_*.tfrecord"
+  dataset_dir: "D://MURA-v1.1"
+  file_pattern: "phase_name//*//*//*//*.png"
   names_to_labels: {
                 '0':'ELBOW_negative', 
                 '1':'ELBOW_positive',
@@ -18,8 +18,8 @@ dataset:
                 '13': 'WRIST_positive'
                 }
   num_samples: 36807
-  num_classes: 14
-  image_type: "jpg"
+  num_classes: 2
+  image_type: "png"
 model:
   name: "mobilenetv2"
 
@@ -34,4 +34,4 @@ train:
   shuffle_buffer_size: 1024
   classification:
     classification_layers: null
-    classification_type: "multiclass"
+    classification_type: "binary"
