--- a/yaml/config.yaml
+++ b/yaml/config.yaml
@@ -1,10 +1,7 @@
 dataset:
   dataset_dir: "D://MURA-v1.1"
   file_pattern: "phase_name//*//*//*//*.png"
-  names_to_labels: {
-                'negative':'0', 
-                'positive':'1'
-                }
+  names_to_labels: ['negative', 'positive']
   num_samples: 36807
   num_classes: 2
   image_type: "png"
