--- a/yaml/config.yaml
+++ b/yaml/config.yaml
@@ -4,15 +4,15 @@ dataset:
   names_to_labels: ['negative', 'positive']
   num_samples: 36807
   num_classes: 2
-  image_type: "rgb"
+  image_type: "gray"
 model:
   name: "mobilenetv2"
 
 train:
   distribute: false
-  batch_size: 32
+  batch_size: 16
   optimizer_noun: "adam"
-  learning_rate: 0.001
+  learning_rate: 0.0001
   num_epochs: 100
   shuffle_buffer_size: 1024
   classification:
