--- a/yaml/config.yaml
+++ b/yaml/config.yaml
@@ -9,11 +9,14 @@ model:
   name: "mobilenetv2"
 
 train:
-  distribute: false
+  distribute: True
   xla : false
   batch_size: 16
   optimizer_noun: "adam"
-  learning_rate: 0.0001
+  learning_rate:
+    initial : 0.0001
+    decay_factor : 0.95
+    before_decay : 1
   num_epochs: 100
   shuffle_buffer_size: 1024
   classification:
