--- a/yaml/config.yaml
+++ b/yaml/config.yaml
@@ -1,27 +1,23 @@
 dataset:
   dataset_dir: "D:/MURA-v1.1"
   file_pattern: "phase_name/*/*/*/*.png"
-  names_to_labels: ['negative', 'positive']
   num_samples: 36807
   num_classes: 2
   image_type: "gray"
 model:
   name: "mobilenetv2"
-
+  classification:
+    classification_layers: null
+    classification_type: "binary"
+  optimizer_noun: "adam"
+  activation_func: "relu"
 train:
   distribute: False
   xla : false
   batch_size: 16
-  optimizer_noun: "adam"
   learning_rate:
     initial : 0.0001
     decay_factor : 0.95
     before_decay : 1
   num_epochs: 100
   shuffle_buffer_size: 1024
-  classification:
-    classification_layers: null
-    classification_type: "binary"
-  regularizer:
-    name: ""
-    weight_decay: ""
